Fixed Typo in Contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/preview.jpeg">
+    <link rel="icon" type="image/png" href="images/BM.png">
     <!-- Apple Touch Icon (For iOS Devices) -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <script src="https://kit.fontawesome.com/9cba8e96cc.js" crossorigin="anonymous"></script>
     <style>
         .error-message {
