--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
     <!-- Apple Touch Icon (For iOS Devices) -->
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <script src="https://kit.fontawesome.com/9cba8e96cc.js" crossorigin="anonymous"></script>
+    <style>
+        .custom-shadow {
+            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.993);
+        }
+
+        .shadow-black{
+            text-shadow: 2px 2px 4px rgba(19, 73, 250, 0.993);
+        }
+
+        .custom-color-white {
+            color: white;
+        }
+
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.2);
+            /* Change this value to adjust transparency */
+            z-index: 1;
+        }
+    </style>
 </head>
 
 <body>
@@ -48,18 +72,11 @@
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start is-size-6">
+            <div class="navbar-end is-size-6">
                 <a class="navbar-item" href="#home">Home</a>
                 <a class="navbar-item" href="#services">Services</a>
                 <a class="navbar-item" href="#properties">Properties</a>
                 <a class="navbar-item" href="#contact">Contact</a>
-                <a class="is-unselectable is-hidden-widescreen-only is-hidden-desktop-only mt-2">-----------</a>
-            </div>
-
-            <div class="navbar-item navbar-end pr-6 has-text-centered is-hidden-mobile is-hidden-tablet-only">
-                <div class="buttons">
-                    <a class="is-unselectable">-----------</a>
-                </div>
             </div>
 
         </div>
@@ -67,44 +84,34 @@
 
     <!-- ....................Hero Section....................... -->
 
-    <section id="home" class="hero is-large-with-navbar full-bg-color is-hidden-mobile pb-3">
+    <section id="home" class="hero is-hidden-mobile is-fullheight-with-navbar pb-3"
+        style="background-image: url('images/full-bg-hero.jpg'); background-size: cover; background-position: center;">
+        <div class="hero-overlay"></div>
         <div class="hero-body">
-            <div class="container">
-                <div class="columns is-vcentered">
-                    <!-- Text Content  -->
-                    <div class="column fixed-width">
-                        <h1 class="title custom-color custom-lineheight">
-                            Welcome to BlueMark.
-                        </h1>
-                        <h2 class="subtitle pt-3">
-                            Creating quality urban lifestyles, building stronger communities all over Dubai.
-                        </h2>
-                        <!-- Services with Tick Icon  -->
-                        <div style="color: black;">
-                            <span class=""><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"></span>
-                                Buying</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Selling</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Leasing</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Property Management</span></span>
-                            <div class="pt-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Mortgages</span></div>
-                        </div>
-                        <div>
-                            <a href="#contact" class="button button-custom mt-5">
-                                Get in touch
-                            </a>
-                        </div>
-                    </div>
-                    <!-- Image Content  -->
-                    <div class="column">
-                        <figure class="image is-3by2">
-                            <img class="radius-cut" src="images/hero2.0.jpg" alt="Cityscape">
-                        </figure>
-                    </div>
+            <div class="container has-text-centered">
+                <h1 class="title custom-shadow custom-color custom-lineheight">
+                    Welcome to BlueMark.
+                </h1>
+                <h2 class="subtitle pt-3 custom-color-white">
+                    Creating quality urban lifestyles, building stronger communities all over Dubai.
+                </h2>
+                <!-- Services with Tick Icon  -->
+                <div style="color: white;" class="shadow-black">
+                    <span class=""><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6"></span>
+                        Buying</span></span>
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Selling</span></span>
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Leasing</span></span>
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Property Management</span></span>
+                    <div class="pt-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Mortgages</span></div>
+                </div>
+                <div>
+                    <a href="#contact" class="button is-link mt-5">
+                        Get in touch
+                    </a>
                 </div>
             </div>
         </div>
@@ -113,51 +120,43 @@
         </div>
     </section>
 
+
     <!-- ....................Hero Section for Mobile....................... -->
 
-    <section
-        class="hero is-large-with-navbar full-bg-color is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only has-text-centered pb-3">
+    <section id="home"
+        class="hero is-fullheight-with-navbar pb-3 is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only is-hidden-fullhd"
+        style="background-image: url('images/full-bg-hero.jpg'); background-size: cover; background-position: center;">
+        <div class="hero-overlay"></div>
         <div class="hero-body">
-            <div class="container">
-                <div class="columns">
-                    <!-- Text Content  -->
-                    <div class="column fixed-width">
-                        <h1 class="title custom-color custom-lineheight is-size-3">
-                            Welcome to BlueMark.
-                        </h1>
-                        <h2 class="subtitle pt-3">
-                            Creating quality urban lifestyles, building stronger communities all over Dubai.
-                        </h2>
-                        <!-- Services with Tick Icon  -->
-                        <div style="color: black;">
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Buying</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Selling</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Leasing</span></span> <br>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Property Management</span></span>
-                            <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span
-                                    class="is-size-6"> Mortgages</span></span>
-                        </div>
-                        <div>
-                            <a href="#contact" class="button button-custom mt-4">
-                                Get in touch
-                            </a>
-                        </div>
-                    </div>
-                    <!-- Image Content  -->
-                    <div class="column">
-                        <figure class="image is-3by2">
-                            <img class="is-unselectable radius-cut" src="images/hero2.0.jpg" alt="Cityscape">
-                        </figure>
-                    </div>
+            <div class="container has-text-centered">
+                <h1 class="title custom-shadow custom-color custom-lineheight">
+                    Welcome to BlueMark.
+                </h1>
+                <h2 class="subtitle pt-3 custom-color-white">
+                    Creating quality urban lifestyles, building stronger communities all over Dubai.
+                </h2>
+                <!-- Services with Tick Icon  -->
+                <div style="color: white;" class="shadow-black">
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Buying</span></span>
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Selling</span></span>
+                    <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Leasing</span></span> <br>
+                    <span class="p-3 pt-2"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Property Management</span></span>
+                    <span class="p-3 pt-2"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Mortgages</span></span>
+                </div>
+                <div>
+                    <a href="#contact" class="button is-link mt-5">
+                        Get in touch
+                    </a>
                 </div>
             </div>
         </div>
         <div class="has-text-centered is-size-5">
-            <a class="slide-up-down" href="#services"><i class="fa-solid fa-angle-down"></i></a>
+            <a class="slide-up-down" href="#about"><i class="fa-solid fa-angle-down"></i></a>
         </div>
     </section>
 
@@ -327,7 +326,8 @@
     <div class="container" id="properties">
         <section class="section">
             <h1 class="title has-text-centered custom-color pb-4">Properties</h1>
-            <p class="subtitle is-6 pt-2 has-text-centered">Explore a Variety of Properties from BlueMark Real Estate.</p>
+            <p class="subtitle is-6 pt-2 has-text-centered">Explore a Variety of Properties from BlueMark Real Estate.
+            </p>
 
             <!-- Categories -->
             <div class="tabs is-centered is-boxed">
@@ -1192,9 +1192,6 @@
                         <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
-                    <figure class="image is-3by2 is-hidden-tablet-only">
-                        <img class="pt-4 radius-cut-special" src="images/service-img.png" alt="Cityscape Image">
-                    </figure>
                 </div>
 
                 <!-- Inquiry Form For Desktops -->
@@ -1204,8 +1201,7 @@
                         <div class="field">
                             <label class="label">Name</label>
                             <div class="control has-icons-left">
-                                <input class="input" type="text" name="name" id="unique-name" placeholder="Your Name"
-                                    >
+                                <input class="input" type="text" name="name" id="unique-name" placeholder="Your Name">
                                 <span class="icon is-small is-left">
                                     <i class="fas fa-user"></i>
                                 </span>
@@ -1226,8 +1222,8 @@
                         <div class="field">
                             <label class="label">Message</label>
                             <div class="control">
-                                <textarea class="textarea" name="message" id="unique-message" placeholder="Your Message"
-                                    ></textarea>
+                                <textarea class="textarea" name="message" id="unique-message"
+                                    placeholder="Your Message"></textarea>
                             </div>
                         </div>
 
@@ -1245,7 +1241,8 @@
     </section>
 
     <!-- Contact Section For Mobile -->
-    <section id="contact" class="unique-merina is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only">
+    <section id="contact"
+        class="unique-merina is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only is-hidden-fullhd">
         <div class="unique-container-2">
             <h1 class="title has-text-centered unique-contact-heading custom-color">Contact Us</h1>
 
@@ -1267,14 +1264,11 @@
                         <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
-                    <figure class="image is-3by2 is-hidden-tablet-only">
-                        <img class="pt-4 radius-cut-special" src="images/service-img.png" alt="Cityscape Image">
-                    </figure>
                 </div>
 
                 <!-- Inquiry Form for Mobile-->
                 <div
-                    class="column is-two-thirds box unique-background-light is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only mt-4">
+                    class="column is-two-thirds box unique-background-light is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only is-hidden-fullhd mt-4">
                     <p class=" unique-contact-subheading">Fill out this inquiry form and we'll reach out to you!</p>
                     <form id="unique-contactForm" action="contact.php" method="POST">
                         <div class="field">
@@ -1410,7 +1404,7 @@
     <!-- ....................Footer Section For Mobile....................... -->
 
     <footer
-        class="section muted-blue is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only has-text-centered">
+        class="section muted-blue is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only has-text-centered is-hidden-fullhd">
         <div class="container">
             <div class="columns">
                 <!-- Column 1: Logo & Subheading -->
@@ -1458,7 +1452,8 @@
                     <form id="newsletterForm" action="news.php" method="POST">
                         <div class="field">
                             <div class="control">
-                                <input class="input" type="email" name="email" id="email" placeholder="Your email"required >
+                                <input class="input" type="email" name="email" id="email" placeholder="Your email"
+                                    required>
                             </div>
                         </div>
                         <div class="field">
