Improved Hero Content Visibility

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         <div class="hero-overlay"></div>
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title custom-shadow custom-color custom-lineheight">
+                <h1 class="title hero-button custom-shadow custom-color custom-lineheight">
                     Welcome to BlueMark.
                 </h1>
-                <h2 class="subtitle pt-3 custom-color-white">
+                <h2 class="subtitle hero-button shadow-black pt-3 custom-color-white">
                     Creating quality urban lifestyles, building stronger communities all over Dubai.
                 </h2>
                 <!-- Services with Tick Icon  -->
-                <div style="color: white;" class="shadow-black">
+                <div style="color: white;" class="shadow-black hero-button">
                     <span class=""><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6"></span>
                         Buying</span></span>
                     <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
@@ -136,14 +136,14 @@
         <div class="hero-overlay"></div>
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title custom-shadow custom-color custom-lineheight">
+                <h1 class="title hero-button custom-shadow custom-color custom-lineheight">
                     Welcome to BlueMark.
                 </h1>
-                <h2 class="subtitle pt-3 custom-color-white">
+                <h2 class="subtitle hero-button shadow-black pt-3 custom-color-white">
                     Creating quality urban lifestyles, building stronger communities all over Dubai.
                 </h2>
                 <!-- Services with Tick Icon  -->
-                <div style="color: white;" class="shadow-black">
+                <div style="color: white;" class="shadow-black hero-button">
                     <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
                             Buying</span></span>
                     <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
@@ -156,7 +156,7 @@
                             Mortgages</span></span>
                 </div>
                 <div>
-                    <a href="#contact" class=" hero-button button is-link mt-5">
+                    <a href="#contact" class="hero-button button is-link mt-5">
                         Get in touch
                     </a>
                 </div>
