--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="has-text-centered is-size-5">
-            <a class="slide-up-down" href="#about"><i class="fa-solid fa-angle-down"></i></a>
+            <a class="slide-up-down hero-button" href="#services"><i class="fa-solid fa-angle-down"></i></a>
         </div>
     </section>
 
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="has-text-centered is-size-5">
-            <a class="slide-up-down" href="#about"><i class="fa-solid fa-angle-down"></i></a>
+            <a class="slide-up-down hero-button" href="#services"><i class="fa-solid fa-angle-down"></i></a>
         </div>
     </section>
 
