Updated Contact Details and Changed Logo

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                             Leasing</span></span>
                     <span class="p-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
                             Property Management</span></span>
-                    <div class="pt-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
-                            Mortgages</span></div>
+                    <span class="pt-3"><img src="images/tick.png" alt="Tick | Checked Box"><span class="is-size-6">
+                            Mortgages</span></span>
                 </div>
                 <div>
                     <a href="#contact" class="hero-button button is-link mt-5">
@@ -1185,10 +1185,10 @@
                 <!-- Contact Details -->
                 <div class="column unique-container2 is-one-third has-text-centered">
                     <h2 class="subtitle is-4 has-text-weight-semibold">Our Office</h2>
-                    <p><strong>Address:</strong> 1234 BlueMark Street,</p>
+                    <p><strong>Address:</strong> B8 - Tower, Al Bashar</p>
                     <p>Dubai, UAE</p>
-                    <p><strong>Phone:</strong> <a href="tel:+971123456789">+971 123 456 789</a></p>
-                    <p><strong>Email:</strong> <a href="mailto:info@bluemark.com">info@bluemark.com</a></p>
+                    <p><strong>Phone:</strong> <a href="tel:+97145579381">+971 455 793 81</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:connect@bluemarkae.com">connect@bluemarkae.com</a></p>
                     <div class="unique-social-icons mt-4">
                         <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
                                 class="fab fa-facebook"></i></a>
