--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- ....................Hero Section....................... -->
 
     <section id="home" class="hero is-hidden-mobile is-fullheight-with-navbar pb-3"
-        style="background-image: url('images/full-bg-hero.jpg'); background-size: cover; background-position: center;">
+        style="background-image: url('images/full-bg-hero.webp'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="hero-body">
             <div class="container has-text-centered">
@@ -142,7 +142,7 @@
 
     <section id="home"
         class="hero is-fullheight-with-navbar pb-3 is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only is-hidden-fullhd"
-        style="background-image: url('images/full-bg-hero.jpg'); background-size: cover; background-position: center;">
+        style="background-image: url('images/full-bg-hero.webp'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="hero-body">
             <div class="container has-text-centered">
