--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@
                     <p><strong>Address:</strong> 1234 BlueMark Street,</p>
                     <p>Dubai, UAE</p>
                     <p><strong>Phone:</strong> <a href="tel:+971123456789">+971 123 456 789</a></p>
-                    <p><strong>Email:</strong> <a href="mailto:info@bluemark.com">connect@bluemarkae.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:connect@bluemark.com">connect@bluemarkae.com</a></p>
                     <div class="unique-social-icons mt-4">
                         <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
                                 class="fab fa-facebook"></i></a>
