--- a/property.html
+++ b/property.html
@@ -38,7 +38,7 @@
 
     <!-- ....................Navigation Menu....................... -->
 
-    <nav class="navbar is-transparent has-text-centered	has-text-weight-semibold" role="navigation"
+    <nav class="navbar is-hidden is-transparent has-text-centered	has-text-weight-semibold" role="navigation"
         aria-label="main navigation">
         <div class="navbar-brand pr-6 pl-2">
             <a class="navbar-item" href="/">
@@ -78,7 +78,7 @@
     <div class="container" id="properties">
         <section class="section">
             <h1 class="title has-text-centered custom-color pb-4">Featured Properties</h1>
-            <p class="subtitle is-6 pt-2 has-text-centered">Explore a Variety of Properties Options in Dubai from
+            <p class="subtitle is-6 pb-4 has-text-centered">Explore a Variety of Properties Options in Dubai from
                 BlueMark Real Estate.
             </p>
 
@@ -923,7 +923,7 @@
 
     <!-- ....................Footer Section....................... -->
 
-    <footer class="section muted-blue is-hidden-mobile">
+    <footer class="is-hidden section muted-blue">
         <div class="container">
             <div class="columns">
                 <!-- Column 1: Logo & Subheading -->
@@ -993,7 +993,7 @@
     <!-- ....................Footer Section For Mobile....................... -->
 
     <footer
-        class="section muted-blue is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only has-text-centered is-hidden-fullhd">
+        class="section is-hidden muted-blue is-hidden-widescreen-only is-hidden-desktop-only is-hidden-tablet-only has-text-centered is-hidden-fullhd">
         <div class="container">
             <div class="columns">
                 <!-- Column 1: Logo & Subheading -->
@@ -1062,7 +1062,7 @@
             </div>
         </div>
     </footer>
-    <button id="toTopBtn" class="to-top-button">
+    <button class="is-hidden" id="toTopBtn" class="to-top-button">
         &uarr;
     </button>
 
