--- a/index.html
+++ b/index.html
@@ -520,8 +520,40 @@
         <div class="container">
             <h1 class="title has-text-centered unique-contact-heading custom-color">Contact Us</h1>
             <p class="subtitle is-6 pt-2 has-text-centered">Reach Out—We’re Here to Make Your Property Journey Easy</p>
-            <hr>
-            <div class="columns is-centered">
+
+            <div class="columns card is-centered ml-1">
+                <!-- Contact Details and Map -->
+                <div class="column unique-merina is-one-third has-text-centered">
+                    <h2 class="subtitle is-4 has-text-weight-semibold">Our Office</h2>
+                    <p><strong>Address:</strong> B8 - Tower, Al Bashar, Dubai, UAE</p>
+                    <p><strong>Phone:</strong> <a href="tel:+97145579381">+971 455 793 81</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:connect@bluemarkae.com">connect@bluemarkae.com</a></p>
+                    <div class="unique-social-icons mt-4">
+                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
+                                class="fab fa-facebook"></i></a>
+                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
+                                class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+
+                <!-- Google Maps Embed -->
+                <div class="column is-two-thirds has-text-centered">
+                    <div class="iframe-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3612.663331338117!2d55.20041577367955!3d25.11325543509878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b9524d9eac1%3A0xd42a5f4c4d0de572!2sB8%20building!5e0!3m2!1sen!2s!4v1741161286697!5m2!1sen!2s"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade" width="100%" height="200px"></iframe>
+                    </div>
+                </div>
+            </div>
+
+            
+
+            <div class="columns card mt-4 is-centered ml-1">
                 <!-- Inquiry Form -->
                 <div class="column unique-merina is-two-thirds box unique-background-light mb-0">
                     <p class=" unique-contact-subheading">Fill out this inquiry form and we'll reach out to you!</p>
@@ -564,38 +596,6 @@
                         <p class="unique-error-message has-text-centered" id="unique-error-message"
                             style="display: none;">All fields are required. Please fill in the missing information.</p>
                     </form>
-                </div>
-            </div>
-
-            <hr class="my-5">
-
-            <div class="columns is-centered">
-                <!-- Contact Details and Map -->
-                <div class="column unique-merina is-one-third has-text-centered">
-                    <h2 class="subtitle is-4 has-text-weight-semibold">Our Office</h2>
-                    <p><strong>Address:</strong> B8 - Tower, Al Bashar, Dubai, UAE</p>
-                    <p><strong>Phone:</strong> <a href="tel:+97145579381">+971 455 793 81</a></p>
-                    <p><strong>Email:</strong> <a href="mailto:connect@bluemarkae.com">connect@bluemarkae.com</a></p>
-                    <div class="unique-social-icons mt-4">
-                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
-                                class="fab fa-facebook"></i></a>
-                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
-                                class="fab fa-linkedin"></i></a>
-                        <a href="https://instagram.com/bluemark_dubai" target="_blank" class="icon has-text-info"><i
-                                class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-
-                <!-- Google Maps Embed -->
-                <div class="column is-two-thirds has-text-centered">
-                    <div class="iframe-container">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3612.663331338117!2d55.20041577367955!3d25.11325543509878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b9524d9eac1%3A0xd42a5f4c4d0de572!2sB8%20building!5e0!3m2!1sen!2s!4v1741161286697!5m2!1sen!2s"
-                            style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade" width="100%" height="200px"></iframe>
-                    </div>
                 </div>
             </div>
         </div>
