Updated Contact Section

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
             <div class="columns pt-4 is-centered">
                 <!-- Contact Details -->
-                <div class="column unique-merina unique-container2 is-one-third has-text-centered">
+                <div class="column card unique-merina unique-container2 is-one-third has-text-centered">
                     <h2 class="subtitle is-4 has-text-weight-semibold">Our Office</h2>
                     <p><strong>Address:</strong> B8 - Tower, Al Bashar</p>
                     <p>Dubai, UAE</p>
@@ -465,10 +465,11 @@
                                 referrerpolicy="no-referrer-when-downgrade" width="100%" height="200px"></iframe>
                         </div>
                     </div>
+                    <p class="subtitle is-6">Click on the map to get directions!</p>
                 </div>
 
                 <!-- Inquiry Form For Desktops -->
-                <div class="column unique-merina is-two-thirds box unique-background-light is-hidden-mobile mb-0 ml-4">
+                <div class="column card unique-merina is-two-thirds box unique-background-light is-hidden-mobile mb-0 ml-4">
                     <p class=" unique-contact-subheading">Fill out this inquiry form and we'll reach out to you!</p>
                     <form id="unique-contactForm" action="contact.php" method="POST">
                         <div class="field">
@@ -618,10 +619,10 @@
         });
     </script>
 
+<!-- ....................Footer Section....................... -->
 
-    <!-- ....................Footer Section....................... -->
-
-    <footer class="section muted-blue is-hidden-mobile">
+<footer class="section muted-blue is-hidden-mobile">
+        <hr>
         <div class="container">
             <div class="columns">
                 <!-- Column 1: Logo & Subheading -->
